# reisswitz-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
examples/minimal/: CMakeLists.txt  main.cpp
include/engine/core/: engine.hpp  window.hpp
src/: main.cpp
src/core/: engine.cpp  window.cpp
tests/: CMakeLists.txt
tests/core/: engine_test.cpp
tests/ecs/: entity_test.cpp
